# sanba

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .trivyignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  cloudbuild.yaml  docker-compose.tools.yml  docker-compose.yml  justfile  main.py  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt
.claude/: README.md  settings.json
.claude/agents/: sanba-reviewer.md
.claude/commands/: adr.md  check.md
.claude/hooks/: format-after-edit.sh  session-start.sh
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: agent-standby.yml  ci.yml  claude-review-response.yml  codeql.yml  codex-review.yml  dependency-review.yml  deploy.yml  labeler.yml  labels.yml  llm-eval.yml  pages.yml  regen-web-lockfile.yml  release-please.yml  review-status.yml  scorecard.yml  security.yml  terraform.yml
a2a-facade/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
a2a-facade/mcp/firestore/: Dockerfile  tools.yaml
a2a-facade/mcp/gcp-observability/: Dockerfile  package-lock.json  package.json
a2a-facade/sidecar/: Dockerfile  entrypoint.py
a2a-facade/src/sanba_a2a_facade/: __init__.py  app.py  audit.py  card.py  config.py  executor.py  jsonrpc.py  pii.py
a2a-facade/src/sanba_a2a_facade/backends/: __init__.py  base.py  holmesgpt.py
a2a-facade/tests/: test_app.py  test_audit.py  test_holmes_backend.py  test_jsonrpc.py
apps/agent/: Dockerfile  README.md  pyproject.toml
apps/agent/src/kikitori_agent/: __init__.py  config.py  evaluation.py  main.py  models.py  pii.py  repository.py  retrieval.py
apps/agent/src/kikitori_agent/connectors/: github.py
apps/agent/src/kikitori_agent/prompts/: interview.py
apps/agent/src/kikitori_agent/tools/: __init__.py  analysis.py
apps/agent/src/sanba_agent/: __init__.py  agent_team.py  background.py  config.py  evaluation.py  events.py  holmes_delegation.py  inquiry_feeder.py  main.py  models.py  observability.py  pii.py  prefetch.py  repository.py  retrieval.py  usage.py
apps/agent/src/sanba_agent/connectors/: __init__.py  github.py
apps/agent/src/sanba_agent/prompts/: interview.py
apps/agent/src/sanba_agent/tools/: analysis.py
apps/agent/tests/: test_analysis.py  test_background_analysis.py  test_config_production_guard.py  test_evaluation.py  test_events.py  test_github_connector.py  test_grounding_guard.py  test_grounding_output_control.py  test_holmes_delegation.py  test_inquiry_feeder.py  test_interview_mode.py  test_investigation.py  test_persist.py  test_pii.py  test_prefetch.py  test_prompts.py  test_question_hydration.py  test_repository.py  test_retrieval.py  test_transcript.py  test_usage_tracking.py  test_voice_stability.py  test_web_event_handlers.py
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/kikitori_api/: __init__.py  auth.py  config.py  ingestion.py  main.py  pii.py
apps/api/src/sanba_api/: __init__.py  analytics.py  auth.py  auth_google.py  config.py  deps.py  github_app.py  github_export.py  ingestion.py  mailer.py  main.py  observability.py  pii.py  realtime.py  repo_indexing.py  repository.py  result_document.py  session_store.py  storage.py  tasks.py  titles.py  vision.py
apps/api/src/sanba_api/routers/: __init__.py  admin.py  auth.py  github_link.py  members.py  products.py  session.py  sessions.py
apps/api/tests/: test_admin.py  test_api.py  test_assets.py  test_auth.py  test_auth_google.py  test_auth_integration.py  test_auth_session.py  test_config_production_guard.py  test_export_title.py  test_github_app.py  test_github_link_api.py  test_grounding_guard.py  test_guest_join_api.py  test_hydration.py  test_ingestion.py  test_mailer.py  test_my_sessions.py  test_observability.py  test_pii.py  test_product_invites_api.py  test_product_members_api.py  test_product_result_config_api.py  test_products_api.py  test_rate_limit.py  test_realtime.py  test_repo_indexing.py  test_result_document.py  test_room_and_nonce.py  test_telemetry.py  test_video_pipeline.py
apps/web/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  (+7 more)
apps/worker/: Dockerfile  README.md  pyproject.toml
apps/worker/src/sanba_worker/: __init__.py  analysis.py  auth.py  config.py  main.py  observability.py  storage.py
apps/worker/tests/: test_analysis.py  test_grounding_guard.py  test_main.py  test_observability.py  test_usage_recording.py
data/: knowledge.sample.json
docs/: README.md  a11y-contrast-adr0033.md  architecture-analysis.md  architecture.md  devops.md  figma-mcp.md  local-dev.md  roadmap.md  security.md  ubiquitous-language.md
elastic-agent/: README.md  pyproject.toml
elastic-agent/definitions/: analytics-agent.json  external-context-agent.json
elastic-agent/definitions/tools/: sanba-product-efficiency.json  sanba-top-cost-sessions.json
elastic-agent/src/sanba_elastic_agent/: __init__.py  a2a_client.py  config.py  contract.py  definitions.py  provision.py
elastic-agent/tests/: test_a2a_client.py  test_contract.py  test_definitions.py  test_provision.py
evals/: interviewer_eval.json
examples/: string_utils.py
external-agents/: README.md  pyproject.toml
infra/: README.md
infra/four-keys/collector/: Dockerfile  pyproject.toml  sample_events.json
infra/four-keys/collector/src/fourkeys/: __init__.py  __main__.py  dora.py  exporter.py  github_source.py  models.py
infra/four-keys/collector/tests/: test_dora.py
interviewer/: __init__.py  agent.py  config.py  elastic.py  embeddings.py  formatting.py  lenses.py  personas.py  prompts.py  tools.py  types.py
scripts/: check-no-comments.mjs  check_no_comments.py  gen-docs-index.py  run_eval.py  seed_knowledge.py  setup_analytics.py  verify-local.sh
security-audit/: coverage-log.md  findings.md  summary.md
site/: index.html  styles.css
tests/: test_eval_dataset.py  test_formatting.py  test_lenses.py  test_prompts.py  test_tools.py
(+452 files in other folders)
