[project]
name = "voice-requirements-interviewer"
version = "0.1.0"
description = "grill-me-inspired voice interviewer: ADK multi-agent (Gemini) + Gemini Live + Elasticsearch RAG, on Cloud Run."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
