[project]
name = "sanba-agent"
version = "0.1.0"
description = "SANBA voice interview agent (LiveKit + Gemini Live + ADK)"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[google]>=1.0.0",
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    "google-cloud-firestore>=2.16.0",
    "elasticsearch>=8.14,<9",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "langfuse>=2.40",
    "structlog>=24.1",
    "sanba-shared",
]

# モノレポ内の共有パッケージを path 依存で解決する (ADR-0014 §8)。
# Docker は build context をリポジトリ直下にし、この相対パスを保ったまま COPY する (§9)。
[tool.uv.sources]
sanba-shared = { path = "../../packages/sanba_shared", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sanba_agent"]
