[project]
name = "sanba-agent"
version = "0.1.0"
description = "SANBA voice interview agent (LiveKit + Gemini Live + ADK)"
requires-python = ">=3.12"
dependencies = [
    "livekit-agents[google]>=1.0.0",
    # LiveKit Cloud の Krisp Background Voice Cancellation（BVC / ADR-0039）。入力音声の
    # 雑音・別話者の被りを抑え、Gemini Live の誤認識/言語ドリフトを減らす。self-host では
    # 実効しないが import は成功する（main.py はフェイルソフトに構築する）。
    "livekit-plugins-noise-cancellation>=0.2",
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    "google-cloud-firestore>=2.16.0",
    "elasticsearch>=8.14,<10",
    "a2a-sdk>=1.1",
    "google-auth>=2.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    # Cloud Trace 直送（ADR-0051）。ADC で実行 SA から Cloud Trace へスパンをエクスポートする。
    "opentelemetry-exporter-gcp-trace>=1.7",
    "structlog>=24.1",
    "sanba-shared",
]

# モノレポ内の共有パッケージを path 依存で解決する (ADR-0014 §8)。
# Docker は build context をリポジトリ直下にし、この相対パスを保ったまま COPY する (§9)。
[tool.uv.sources]
sanba-shared = { path = "../../packages/sanba_shared", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sanba_agent"]
