[project]
name = "sanba-api"
version = "0.1.0"
description = "SANBA API: LiveKit token issuing and session orchestration"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "livekit-api>=0.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "google-cloud-firestore>=2.16.0",
    "elasticsearch>=8.14,<10",
    "google-genai>=1.0.0",
    "pypdf>=4.2",
    "python-multipart>=0.0.9",
    "structlog>=24.1",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are called in argument defaults by design.
extend-immutable-calls = ["fastapi.File", "fastapi.Depends", "fastapi.Query", "fastapi.Form"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sanba_api"]
