[project]
name = "sanba-worker"
version = "0.1.0"
description = "SANBA worker: async video analysis (Cloud Tasks push handler, ADR-0040)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.14.2",
    "google-cloud-firestore>=2.16.0",
    "google-cloud-storage>=2.16.0",
    "elasticsearch>=8.14,<10",
    "google-genai>=1.0.0",
    "structlog>=24.1",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
    "sanba-shared",
]

# モノレポ内の共有パッケージを path 依存で解決する（ADR-0014 §8）。
# Docker は build context をリポジトリ直下にし、この相対パスを保ったまま COPY する（§9）。
[tool.uv.sources]
sanba-shared = { path = "../../packages/sanba_shared", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sanba_worker"]
