[project]
name = "sanba-fourkeys"
version = "0.1.0"
description = "SANBA Four Keys / DORA self-measurement collector (GitHub -> Prometheus)"
requires-python = ">=3.12"
# Intentionally dependency-free: the collector uses only the standard library so
# the container stays minimal and runs non-root (security guidance in CLAUDE.md).
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fourkeys"]
